# testing_components

./: README.md
compress/: 0.20.0,  Cargo.toml
compress/.cargo/: config.toml
compress/src/: bindings.rs  lib.rs
compress/wit/: world.wit
decompress/: Cargo.toml
decompress/.cargo/: config.toml
decompress/src/: bindings.rs  lib.rs
decompress/wit/: world.wit
